# danil-gear-academy

./: .gitignore  README.md
escrow/: .binpath  .gitignore  .metahash  Cargo.toml  build.rs  escrow.meta.txt
escrow/io/: Cargo.toml
escrow/io/src/: lib.rs
escrow/src/: lib.rs
escrow/state/: Cargo.toml  build.rs
escrow/state/src/: lib.rs
escrow/tests/: escrow_test.rs
hello-world/: .metahash  Cargo.toml  hello_world.meta.txt
hello-world/hello-world-io/: Cargo.toml
hello-world/hello-world-io/src/: lib.rs
hello-world/src/: lib.rs
hello-world/tests/: hello_world_tests.rs
program-factory/: .binpath  Cargo.toml
program-factory/escrow/: Cargo.toml
program-factory/escrow/io/: Cargo.toml
program-factory/escrow/io/src/: lib.rs
program-factory/escrow/src/: lib.rs
program-factory/escrow/tests/: escrow_test.rs
program-factory/src/: lib.rs
program-factory/tests/: factory_test.rs
tamagotchi-army/: .binpath  .gitignore  Cargo.toml  build.rs  tamagotchi_army.meta.txt
tamagotchi-army/hello-world/: .gitignore  hello_world.meta.txt
tamagotchi-army/hello-world/hello-world-io/: Cargo.toml
tamagotchi-army/hello-world/hello-world-io/src/: lib.rs
tamagotchi-army/hello-world/tests/: hello_world_tests.rs
tamagotchi-army/io/: Cargo.toml
tamagotchi-army/io/src/: lib.rs
tamagotchi-army/src/: lib.rs
tamagotchi-army/tests/: army_test.rs
